--- a/WXOrdrPlatform/WXOrdrPlatform.csproj
+++ b/WXOrdrPlatform/WXOrdrPlatform.csproj
@@ -183,6 +183,7 @@
     <Compile Include="App_Start\AuthConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Content\plugins\ueditor\net\App_Code\Config.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -213,6 +214,7 @@
     <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Controllers\ServerController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -599,6 +601,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\plugins\ueditor\net\upload\image\20160826\" />
+    <Folder Include="Core\" />
     <Folder Include="ErrorLog\" />
     <Folder Include="Filters\" />
     <Folder Include="UpLoadFile\" />
