删除无用文件

--- a/WXOrdrPlatform/bin/WXOrdrPlatform.dll.config
+++ b/WXOrdrPlatform/bin/WXOrdrPlatform.dll.config
@@ -4,6 +4,9 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -25,16 +28,16 @@
     <!-- 商户密钥 -->
     <add key="apiKey" value="11002211002211002211002211006666"/>
     <!--支付回调地址 -->
-    <add key="notifyUrl" value="http://www.xuecheh.com/Home/PayBack"/>
+    <add key="notifyUrl" value="http://www.hbjyjn.com/Home/PayBack"/>
     <!-- 交易方式 -->
     <add key="tradeType" value="JSAPI"/>
 
     <!-- 服务器域名 -->
-    <add key="WebUrl" value="http://www.xuecheh.com/"/>
+    <add key="WebUrl" value="http://www.hbjyjn.com/"/>
 
     <!-- 是否启用基类获取微信用户openid -->
     <add key="useBasePageGetOpenID" value="1"/>
-    <add key="redirectUri" value="http://www.xuecheh.com/Home/GetOpenId"/>
+    <add key="redirectUri" value="http://www.hbjyjn.com/Home/GetOpenId"/>
 
     <!-- 是否启用测试数据 -->
     <add key="isTest" value="1"/>
@@ -46,8 +49,11 @@
     <add key="appName" value="fxhh"/>
   </appSettings>
   <system.web>
-    <httpRuntime/>
-    <compilation debug="true" targetFramework="4.0"/>
+    
+    <httpRuntime targetFramework="4.5" />
+
+    <compilation debug="true" targetFramework="4.5" />
+    
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers"/>
@@ -61,6 +67,18 @@
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
+    <httpProtocol>
+      <customHeaders>
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <!--支持的http 动作-->
+        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
+        <!--<add name="Access-Control-Allow-Headers" value="Origin, X-Requested-With, Content-Type, Accept" />-->
+        <!--允许请求的http 动作-->
+        <add name="Access-Control-Request-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
+        <!--响应头 请按照自己需求添加 这里新加了token这个headers-->
+        <add name="Access-Control-Allow-Headers" value="Content-Type,X-Requested-With,token" />
+      </customHeaders>
+    </httpProtocol>
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit"/>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit"/>
@@ -96,5 +114,9 @@
         <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
+    <dependentAssembly>
+      <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+      <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+    </dependentAssembly>
   </runtime>
 </configuration>
