新增忽略文件；

--- a/WXOrdrPlatform/bin/WXOrdrPlatform.dll.config
+++ b/WXOrdrPlatform/bin/WXOrdrPlatform.dll.config
@@ -50,7 +50,7 @@
   </appSettings>
   <system.web>
     
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime />
 
     <compilation debug="true" targetFramework="4.5" />
     
